优化，加入Group关键字，方便正确生成Route.group的内容